--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,4 +40,5 @@ jobs:
     - run: npx minify output.css > output.min.css
 
     - name: Substitui link no index.html
+      uses: actions/checkout@v4
     - run: sed -i "s/output.css/output.min.css/g" index.min.html
