--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,21 +31,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    - uses: actions/checkout@v4
     
     - name: Executa npx para processar TailwindCSS
-      uses: mikeal/npx@1.0.0, actions/checkout@v4
+      uses: mikeal/npx@1.0.0
       continue-on-error: true
     - run: npx tailwindcss -i ./input.css -o ./output.css
 
     - name: Lista FileSystem
-      uses: actions/checkout@v4
     - run: tree
     
     - name: Executa npx para processar Minify
-      uses: mikeal/npx@1.0.0, actions/checkout@v4
+      uses: mikeal/npx@1.0.0
     - run: npx minify ./index.html > ./index.min.css
     - run: npx minify ./output.css > ./output.min.css
 
     - name: Substitui link no index.html
-      uses: actions/checkout@v4
     - run: sed -i "s/output.css/output.min.css/g" ./index.min.html
