--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,11 +43,9 @@ jobs:
     - run: npx minify ./index.html > ./index.min.css
     - run: npx minify ./output.css > ./output.min.css
 
-  link:
-    needs: [build, npx]
-    runs-on: ubuntu-latest
-
-    steps:
+    - name: Lista FS
+    - uses: actions/checkout@v4
+    - run: tree
     
     - name: Substitui link no index.html
       uses: actions/checkout@v4
