--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Executa NPX para TailwindCSS e Minify
       uses: mikeal/npx@1.0.0
     - run: npx tailwindcss -i ./input.css -o ./output.css
-    - run: npx minify ./index.html > ./index.min.css
+    - run: npx minify ./index.html > ./index.min.html
     - run: npx minify ./output.css > ./output.min.css
     - run: sed -i "s/output.css/output.min.css/g" ./index.min.html
