--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,11 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     
     steps:
@@ -32,3 +35,13 @@ jobs:
     - run: npx minify ./index.html > ./index.min.html
     - run: npx minify ./output.css > ./output.min.css
     - run: sed -i "s/output.css/output.min.css/g" ./index.min.html
+  
+    - name: Commit files
+      run: |
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git commit -a -m "Github Actions Test"
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
