--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   test:
@@ -38,9 +39,9 @@ jobs:
   
     - name: Commit files
       run: |
-        git commit -a -m "Github Actions Test"
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+        git commit -a -m "Github Actions Test"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
