--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,4 +50,5 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        force: true
         branch: main
