--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,12 +34,17 @@ jobs:
     - run: npm fund
     
     - name: Executa NPX para TailwindCSS e Minify
-      uses: mikeal/npx@1.0.0
-    - run: npx tailwindcss -i ./input.css -o ./output.css
-    - run: npx minify ./index.html > ./index.min.html
-    - run: npx minify ./output.css > ./output.min.css
-    - run: sed -i "s/output.css/output.min.css/g" ./index.min.html
-    - run: tree -L 1
+      run: |
+        npm install npx
+        npx tailwindcss -i ./input.css -o ./output.css
+        npx minify ./index.html > ./index.min.html
+        npx minify ./output.css > ./output.min.css
+
+    - name: Corrige link do arquivo index.html
+      run: sed -i "s/output.css/output.min.css/g" ./index.min.html
+
+    - name: Lista arquivos presentes na raiz
+      run: tree -L 1
   
     - name: Commit files
       run: |
