--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,8 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git commit --all -m "Github Actions Test"
+        git add .
+        git commit -m "Github Actions Test"
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
